# Goodstart_telegram_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bot_example.py  d  docker-compose.production.yaml  docker-compose.yml  e HEAD  pyproject.toml  requirements.txt  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  docs-template.md  new-feature.md
.github/workflows/: build-and-push-github-packages.yml  build_and_push_github_packages.yaml  codestyle_ruff.yaml  prod_deploy.yaml  prod_deploy.yml  pull_and_run_on_server  pull_and_run_on_server.yaml  stage_deploy.yml
docs/: Goodstart ER diagram.drawio
docs/bpmn/: registartion.bpmn  registration.bpmn  student_interaction.bpmn  teacher_interaction.bpmn
infra/: entrypoint.sh
infra/dev/: Dockerfile  cert.pem  dev.Dockerfile  docker-compose.dev.yaml  docker-compose.production.yaml  docker-compose_local.yaml  docker-compose_local_all.yaml  goodstart_bot.service  key.pem  nginx.conf  pyproject.toml
infra/nginx/: nginx.conf
infra/prod/: docker-compose.prod.yaml  docker-compose.production.yaml  goodstart_bot.service  nginx.conf  nginx.prod.conf.template  prod.Dockerfile
infra/stage/: docker-compose.stage.yaml  goodstart_bot.service  nginx.conf  nginx.stage.conf.template  stage.Dockerfile
requirements/: dev.txt  prod.txt
src/: manage.py
src/admin_user/: admin.py  apps.py  managers.py  models.py
src/admin_user/factories/: __init__.py  constants.py  factories.py
src/admin_user/migrations/: 0001_initial.py  0002_alter_administrator_phone.py
src/bot/: __init__.py  apps.py  bot_interface.py  handlers.py  keyboards.py  persistence.py  states.py  utils.py
src/bot/handlers/: __init__.py  conversation.py  echo.py  feedback.py  help.py  left_lessons.py  registration.py  schedule.py  start.py  success_registration.py  unknown_command.py  was_the_lesson.py
src/bot/messages_texts/: constants.py
src/core/: admin.py  apps.py  asgi.py  asgi_dev.py  asgi_prod.py  settings.py  urls.py  utils.py  views.py  wsgi.py
src/core/config/: settings_base.py  settings_for_dev.py  settings_for_prod.py  settings_for_tests.py
src/core/logging/: __init__.py  logger.py
src/potential_user/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  utils.py  views.py
src/potential_user/migrations/: 0001_initial.py  0002_alter_applicationform_phone_number.py  0002_applicationform_parents_contacts_and_more.py  0003_alter_applicationform_parents_contacts_and_more.py  0003_alter_applicationform_phone_number.py  0004_alter_applicationform_approved.py
src/potential_users/: admin.py  apps.py  models.py
src/schooling/: admin.py  apps.py  constants.py  form_validators.py  forms.py  models.py  signals.py  signals_bot.py  urls.py  utils.py  validator.py  views.py
src/schooling/factories/: __init__.py  constants.py  factories.py
src/schooling/migrations/: 0001_initial.py  0002_add_study_classes.py  0002_add_subject.py  0003_add_subject.py  0003_studyclass_student_teacher.py  0004_alter_student_paid_lessons_and_more.py  0004_alter_student_study_class_id.py  0004_alter_student_telegram_id_alter_teacher_telegram_id.py  0004_lesson_homework_url_lesson_video_meeting_url.py  0004_lesson_lesson_unique_lesson.py  0005_alter_student_options_alter_teacher_options_and_more.py  0005_alter_student_paid_lessons.py  0005_alter_studyclass_options.py  0005_alter_studyclass_options_student_state_teacher_state.py  0005_lesson_lesson_count_lesson_regular_lesson_and_more.py  0005_lesson_lesson_count_lessongroup_lesson_group.py  0005_lesson_notification_sent.py  0005_remove_lesson_is_passed_student_and_more.py  0005_remove_lesson_test_lesson.py  0005_remove_lesson_test_lesson_alter_lesson_duration.py  0005_remove_lesson_unique_lesson_and_more.py  0006_alter_lesson_duration.py  0006_alter_lesson_teacher_id.py  0006_alter_student_phone_number_and_more.py  0006_alter_student_study_class_id.py  0006_lesson_regular_schedule_alter_lesson_duration_and_more.py  0006_merge_20240607_1417.py  0006_merge_20250216_1335.py  0007_alter_lesson_options_alter_student_options_and_more.py  0007_alter_lesson_test_lesson.py  0007_lesson_lesson_count_lesson_regular_lesson_and_more.py  0007_remove_lesson_notification_sent.py  0007_remove_lesson_regular_schedule_lesson_regular_lesson.py  (+16 more)
src/templates/: base.html  edit_homework.html  feedback_email.html  lesson_cancel_success.html  lesson_change_success.html  payment_page.html  payment_summary.html  registration_form.html  registration_notification_email.html  registration_success.html  schedule.html  schedule_cancel_lesson.html  schedule_change_dt_lesson.html  schedule_details_card.html
(+41 files in other folders)
